--- a/pastahtml/jogo1.html
+++ b/pastahtml/jogo1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>VISÃO GERAL DO JOGO
           Um recomeço ousado
               Kratos é pai novamente. Como mentor e protetor de Atreus, um filho determinado a ganhar seu respeito, ele é forçado a encarar e controlar a fúria que há muito tempo o define enquanto viaja por um mundo ameaçador com o seu filho.
