--- a/pastahtml/jogo3.html
+++ b/pastahtml/jogo3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>EA SPORTS™ FIFA 22 deixa o jogo ainda mais real com avanços fundamentais de jogabilidade e uma nova temporada de inovações em todos os modos.
             O FIFA, um dos principais títulos de futebol e franquia da EA Sports, promete uma grande evolução para seu próximo game. Novas tecnologias de captação de movimentos, aprendizado constante da inteligência artificial e realismo em animações aumentam a expectativa em torno do jogo.<BR> Para conhecer mais sobre o FIFA 22
             
