--- a/pastahtml/jogo4.html
+++ b/pastahtml/jogo4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>Fortnite é um famoso jogo de tiro do tipo Battle Royale, ou seja, todos contra todos onde o último sobrevivente é o vencedor. O game tem versões para PC, PS4, Xbox One, Nintendo Switch, iOS e Android. Assim, como outros títulos do gênero, é necessário dominar uma série de estratégias para ficar vivo por mais tempo.<BR> Para conhecer mais sobre o Fortnite
 
             <a href="https://www.fortnite.com/"><button>
