--- a/pastahtml/jogo5.html
+++ b/pastahtml/jogo5.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>CAMPEONATO FIA FORMULA 2™
             Assuma o volante e encare o desafio da temporada 2022 da Fórmula 2™, com suas respectivas equipes e pilotos. Escolha um dos 22 pilotos do grid, incluindo Felipe Drugovich (campeão da 2022 FIA Formula 2™) ou os novatos Logan Sargeant e Jack Doohan, em um total de 14 corridas e disputas da F2™ Sprint. Disponível agora para amantes da velocidade.<BR> Para conhecer mais sobre o Fortnite
 
