--- a/pastahtml/jogo6.html
+++ b/pastahtml/jogo6.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>Misture o seu estilo e experiência em um cenário global e competitivo. Você terá 13 rodadas para atacar e defender com disparos certeiros e habilidades táticas. Com apenas uma vida por rodada, você deve pensar mais rápido que o oponente se quiser sobreviver. Encare inimigos nos modos Competitivo e Sem Ranque, além da Disputa da Spike e do Mata-Mata!<BR> Para conhecer mais sobre o Valorant
 
             <a href="https://playvalorant.com/pt-br/?gad=1&gclid=CjwKCAjwvJyjBhApEiwAWz2nLYacCtaEu5QC3YG2p8bmre7XOC3LYI7U1NDxD-mPEesPc1n_6DdaDBoCVFcQAvD_BwE&gclsrc=aw.ds"><button>
