--- a/pastahtml/jogo8.html
+++ b/pastahtml/jogo8.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>Boas-vindas a Los Santos
             Quando um tratante inexperiente, um ladrão de bancos aposentado e um psicopata aterrorizante se envolvem com algumas das figuras mais assustadoras e problemáticas do submundo do crime, do governo dos EUA e da indústria do entretenimento, eles precisam realizar uma série de golpes ousados para sobreviver em uma cidade implacável onde não podem confiar em ninguém, nem mesmo um no outro.
             Os jogadores poderão transferir o progresso do Modo História do GTAV e os personagens e progresso atuais do GTA Online para o PS5 e o Xbox Series X|S com uma migração única.<BR> Para conhecer mais sobre o GTA V
