--- a/pastahtml/jogo9.html
+++ b/pastahtml/jogo9.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div> 
-      <a href="index.html">Voltar</a>
+      <a href="../index.html">Voltar</a>
         <p>Roblox é uma plataforma de jogos MMOSG e Sandbox baseados normalmente em mundo aberto, multiplataforma e simulação que permite criar do zero seu próprio mundo virtual chamado de 'experiência' ou 'place' onde os milhares de jogadores da plataforma podem interagir sobre.<BR> Para conhecer mais sobre o Roblox
 
 
