--- a/pastahtml/Plataformas.html
+++ b/pastahtml/Plataformas.html
@@ -12,10 +12,10 @@
     <img src="../Imagem/LogoGame.png"  width="100rem" />
 
  <nav>
-     <a href="index.html">Principal</a>
-     <a href="../pastahtml/generos.html">Gêneros</a>
-     <a href="../pastahtml/Plataformas.html">Plataformas</a>
-     <a href="../pastahtml/dicas.html">Dicas</a>
+     <a href="../index.html">Principal</a>
+     <a href="./generos.html">Gêneros</a>
+     <a href="./Plataformas.html">Plataformas</a>
+     <a href="./dicas.html">Dicas</a>
  </nav>
 </header>
 <body>
