--- a/pastahtml/generos.html
+++ b/pastahtml/generos.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicas</title>
-    <link rel="stylesheet" href="../CSS/generos.css"/>
+    <link rel="stylesheet" href="./CSS/generos.css"/>
 </head>
 <header>
 
-    <img src="../Imagem/LogoGame.png"  width="100rem" />
+    <img src="./Imagem/LogoGame.png"  width="100rem" />
 
  <nav>
-     <a href="index.html">Principal</a>
-     <a href="../pastahtml/generos.html">Gêneros</a>
-     <a href="../pastahtml/Plataformas.html">Plataformas</a>
-     <a href="../pastahtml/dicas.html">Dicas</a>
+     <a href="./index.html">Principal</a>
+     <a href="./pastahtml/generos.html">Gêneros</a>
+     <a href="./pastahtml/Plataformas.html">Plataformas</a>
+     <a href="./pastahtml/dicas.html">Dicas</a>
  </nav>
 </header>
 <body>
